css/style.css
/* Custom Stylesheet */


/*** GENERAL ***/
/*==========================================================================*/

/* general */
.container {width: 80%;}
.justify {text-align: justify;}
.lightback {background-color: #eeeeee;}
h1 {font-size: 3em;margin: 0.67em 0;}
h2 {font-size: 2em;margin: 0.67em 0;}
p {line-height: 2rem;}
.button-collapse {color: #fdd835;}
.icon-block {padding: 0 10px;}
.icon-block .material-icons {font-size: inherit;}

/* footer */
footer.page-footer {margin: 0;}

/* index */
.parallax-container {
  min-height: 380px;
  line-height: 0;
  height: 100vh; /* Quentin 100vh , was: auto */
  color: rgba(255,255,255,.9);
}
.parallax-container .section {width: 100%;}
@media only screen and (max-width : 992px) {
  .parallax-container .section {position: absolute; top: 40%;}
  #index-banner .section {top: 10%;}
}
@media only screen and (max-width : 600px) {
  #index-banner .section {top: 0;}
}
.overlay {width: 100%;}
#overlay {margin-top:-25%; width: 100%;}
#imgoverlay {width: 100%;}
@media handheld, screen and (max-width : 600px) {
.overlay {width: 100%;}
#overlay {margin-top:-45%; width:100%; overflow-x: hidden;}
#imgoverlay { width: 170%; -webkit-transform: translateX(-20.6%); transform: translateX(-20.6%);}
}
.tagline {margin-top:17%;}

/*** BLOG ***/
/*==========================================================================*/
p.blog {line-height: 1.25rem;}
.card .card-title {font-size: 20px;font-weight: 400;}


/*** NAVBAR ***/
/*==========================================================================*/

/* general */
nav ul a, nav .brand-logo, nav .brand-name {color: #444; z-index: 999;}
nav {
  width: 100%;
  height: 120px;
  position: fixed;
  background-color: rgba(255,255,255,0);
  z-index: 99;
  -webkit-transition: all 0.8s;
  -moz-transition: all 0.8s;
  -ms-transition: all 0.8s;
  -o-transition: all 0.8s;
  transition: all 0.8s;
}
nav.smaller {height: 55px; background-color: rgba(255,255,255,1);}
/* nav list items */
nav ul li {
  float: right;
  padding: 0;
  line-height: 48px;
  /* FIX transition does not seem to be working */
  -webkit-transition: all 0.8s;
  -moz-transition: all 0.8s;
  -ms-transition: all 0.8s;
  -o-transition: all 0.8s;
  transition: all 0.8s;
}
nav.smaller ul li{
  line-height: 45px;
  /* FIX transition does not seem to be working */
  -webkit-transition: all 0.8s;
  -moz-transition: all 0.8s;
  -ms-transition: all 0.8s;
  -o-transition: all 0.8s;
  transition: all 0.8s;
}
/* nav shadow */
nav {box-shadow: none;}
nav.smaller {box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);}

/*** nav large screens ***/
/* general */
@media only screen and (min-width: 993px) {
nav a.button-collapse {display: none;}
nav .button-collapse {float: left; position: relative; z-index: 1; height: 560px;}
nav .button-collapse i {font-size: 2.7rem; height: 56px; line-height: 56px;}
nav ul {display: inline-block; position: relative; top: 36%;}
nav.smaller ul {display: block; top:20%}
nav ul a {font-size: 1.2vw}
}
/* brand logo */
nav .brand-logo {
  height: 90%;
  position: absolute;
  color: #fff;
  display: inline-block;
  font-size: 2.1rem;
  padding: 0;
  white-space: nowrap;
  top: 4%;
  -webkit-transition: all 0.8s;
  -moz-transition: all 0.8s;
  -ms-transition: all 0.8s;
  -o-transition: all 0.8s;
  transition: all 0.8s;
}
nav.smaller .brand-logo {
  height: 80%;
  position: absolute;
  color: #fff;
  display: inline-block;
  font-size: 2.1rem;
  padding: 0;
  white-space: nowrap;
  top: 5px
    }
/* brand name */
nav .brand-name {
  position: absolute;
  display: inline-block;
  font-family: 'Poppins', sans-serif;
  font-size: 1.8rem;
  padding: 0;
  white-space: nowrap;
  top: 33%;
  left: 21%;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
  -webkit-transition: all 0.8s;
  -moz-transition: all 0.8s;
  -ms-transition: all 0.8s;
  -o-transition: all 0.8s;
  transition: all 0.8s;
}
nav.smaller .brand-name {
  position:absolute;
  display: inline-block;
  font-size: 1.5rem;
  padding: 0;
  white-space: nowrap;
  left: 14%;
  top: 0%;
}

/*** nav medium screens ***/
/* general */
@media only screen and (max-width: 992px) {
nav {
  width: 100%;
  height: 80px;
  position: fixed;
  background-color: rgba(255,255,255,1);
  z-index: 999;
  -webkit-transition: all 0.8s;
  -moz-transition: all 0.8s;
  -ms-transition: all 0.8s;
  -o-transition: all 0.8s;
  transition: all 0.8s;
}
nav.smaller{}
nav ul{display: inline-block;}
nav.smaller ul{display: block;}
nav ul li {
  float: right;
  padding: 0;
  line-height: 80px;
  /* FIX transition does not seem to be working */
  -webkit-transition: all 0.8s;
  -moz-transition: all 0.8s;
  -ms-transition: all 0.8s;
  -o-transition: all 0.8s;
  transition: all 0.8s;
}
nav.smaller ul li {
  float: right;
  padding: 0;
  line-height: 56px;
  /* FIX transition does not seem to be working */
  -webkit-transition: all 0.8s;
  -moz-transition: all 0.8s;
  -ms-transition: all 0.8s;
  -o-transition: all 0.8s;
  transition: all 0.8s;
}
nav ul a {font-size: 1.7vw}
}
/* brand logo */
@media only screen and (max-width: 992px) {
  nav .brand-logo {
    position: absolute;
    left: 0%;
    height: 85%;
    -webkit-transform: translateX(-50%);
            transform: translateX(-50%);
  }
}
/* brand name */
@media only screen and (max-width: 992px) {
  nav .brand-name {
    position: relative;
    display: inline-block;
    left: 19%;
    top: 14%;
    font-size: 2.8vw;
    padding: 0;
  }
  nav.smaller .brand-name {
  position:absolute;
  display: inline-block;
  font-size: 2.5vw;
  padding: 0;
  white-space: nowrap;
  left: 19%;
  top: 14%;
}
}

/*** nav small screens ***/
/* general */
@media only screen and (max-width: 600px) {
  nav {height: 15%; background-color: rgba(255,255,255,1);}
  nav.smaller {height:10%; background-color: rgba(255,255,255,1);}
  .tagline {margin-top:40%;}
  .overlay {display: none;}
}
/* brand logo */
@media only screen and (max-width: 600px) {
  nav .brand-logo {
    position: absolute;
    left: 50%;
    height: 70%;
    -webkit-transform: translateX(-50%);
            transform: translateX(-50%);
  }
  nav.smaller .brand-logo {
    left: 50%;
    height: 85%;
  }
} 
/* brand name */
@media only screen and (max-width: 600px) {
  nav .brand-name {
    position: absolute;
    font-size: 1.4rem;
    left: 50%;
    top: 65%;
    
  }
  nav.smaller .brand-name {
    display: none;
  }
}


/*** PORTFOLIO PANORAMA SLIDER ***/
/*==========================================================================*/

.slider .indicators .indicator-item.active {background-color: #fdd835;}
.slider .indicators {
  position: absolute;
  text-align: center;
  left: 0;
  right: 0;
  bottom: -10px;
  margin: 0;
}



/*** FIX FOR MATERIAL DESIGN ICONS ***/
/*==========================================================================*/
@font-face {
font-family: 'Material Icons';
font-style: normal;
font-weight: 400;
src: local('Material Icons'), local('MaterialIcons-Regular'), url(http://fonts.gstatic.com/s/materialicons/v7/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
}
.material-icons {
font-family: 'Material Icons';
font-weight: normal;
font-style: normal;
font-size: 24px;
line-height: 1;
letter-spacing: normal;
text-transform: none;
display: inline-block;
word-wrap: normal;
-webkit-font-feature-settings: 'liga';
-webkit-font-smoothing: antialiased;
}




.new-background{position: relative; height: 100vh; overflow: hidden; margin-top:-10%;}
.background-img {position: absolute; height: 100%; top:-9999px; left:-9999px; right: -9999px; bottom:-9999px;margin: auto;}
@media only screen and (max-width: 600px) {
  .new-background{margin-top:-6%;}
}





/*** TEMPORARY PLACEHOLDER INDEX PAGE  - remove ***/
/*==========================================================================*/
.container-centered {margin: 10% auto; max-width: 1280px; width: 90%;}
@media only screen and (min-width: 601px) {.container-centered {width: 85%; margin: 10% auto}}
@media only screen and (min-width: 993px) {.container-centered {width: 70%;}}
.centerimg {margin-left:44%;}

